--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
-<div>
-  <h3><%= @user.name %></h3>
+<div class = "profile_container">
+  <h3 class = "profile-name"><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
-  <p><%= link_to "プロフィール編集", edit_user_path %></p>
+  <% if @user.id == current_user.id %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <% end %>
 </div>
-<% @post_images.each do |post_image| %>
-<% end %>
+
+<%= render 'post_images/list', post_images: @post_images %>
+
+
